--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ permissions:
 env:
   IMAGE_NAME: ghcr.io/${{ github.repository }}/employee-dir
   STAGING_URL: http://98.90.104.212
-  PROD_URL:    http://34.226.23.174
+  PROD_URL: http://34.226.23.174
 
 jobs:
   build_test_push:
@@ -20,18 +20,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: '3.11' }
-      - run: |
+        with:
+          python-version: '3.11'
+      - name: Lint & unit tests
+        run: |
           pip install -r requirements.txt pytest flake8 bandit
           flake8 app || true
           bandit -q -r app || true
           pytest -q
-      - uses: docker/login-action@v3
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v6
+      - name: Build & push image
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: docker/Dockerfile
@@ -46,15 +50,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install "ansible-core>=2.16,<2.20"
-      - run: ansible-galaxy collection install community.docker
+      - name: Install Ansible
+        run: pipx install "ansible-core>=2.16,<2.20"
+      - name: Install docker collection
+        run: ansible-galaxy collection install community.docker
       - name: Write SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
       - name: Deploy to STAGING (pull image)
-        env: { IMG: ${{ env.IMAGE_NAME }}, TAG: ${{ github.run_number }} }
+        env:
+          IMG: ${{ env.IMAGE_NAME }}
+          TAG: ${{ github.run_number }}
         run: |
           ANSIBLE_HOST_KEY_CHECKING=False \
           ansible-playbook -i ansible/inventory.ini ansible/staging_pull.yml \
@@ -66,12 +74,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: '20' }
+        with:
+          node-version: '20'
       - run: npm init -y
       - run: npm i -D @playwright/test
       - uses: microsoft/playwright-github-action@v1
       - name: Playwright UI test
-        env: { STAGING_URL: ${{ env.STAGING_URL }} }
+        env:
+          STAGING_URL: ${{ env.STAGING_URL }}
         run: npx playwright test tests/ui/playwright.spec.ts --project=chromium
       - name: k6 smoke
         run: |
@@ -81,8 +91,11 @@ jobs:
         run: |
           docker run --rm -t -v "$PWD":/zap/wrk ghcr.io/zaproxy/zaproxy:stable \
             zap-baseline.py -t "${{ env.STAGING_URL }}" -g zap.conf -r zap.html || true
-      - uses: actions/upload-artifact@v4
-        with: { name: zap-report, path: zap.html }
+      - name: Upload ZAP report
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-report
+          path: zap.html
 
   deploy_prod:
     needs: checks_staging
@@ -90,15 +103,19 @@ jobs:
     environment: production
     steps:
       - uses: actions/checkout@v4
-      - run: pipx install "ansible-core>=2.16,<2.20"
-      - run: ansible-galaxy collection install community.docker
+      - name: Install Ansible
+        run: pipx install "ansible-core>=2.16,<2.20"
+      - name: Install docker collection
+        run: ansible-galaxy collection install community.docker
       - name: Write SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
       - name: Blue-green to PROD (pull image)
-        env: { IMG: ${{ env.IMAGE_NAME }}, TAG: ${{ github.run_number }} }
+        env:
+          IMG: ${{ env.IMAGE_NAME }}
+          TAG: ${{ github.run_number }}
         run: |
           ANSIBLE_HOST_KEY_CHECKING=False \
           ansible-playbook -i ansible/inventory.ini ansible/prod-bluegreen-pull.yml \
