--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,27 +19,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
       - name: Lint & unit tests
         run: |
           pip install -r requirements.txt pytest flake8 bandit
           flake8 app || true
           bandit -q -r app || true
           echo "== pytest discovery =="
-          python - <<'PY'
-      import os, glob
-      print("CWD:", os.getcwd())
-      print("TEST FILES:", sorted(glob.glob('tests/**/*.py', recursive=True)))
-      PY
+          python -c "import os,glob; print('CWD:', os.getcwd()); print('TEST FILES:', sorted(glob.glob('tests/**/*.py', recursive=True)))"
           pytest -q || echo "no tests found (continuing)"
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build & push image
         uses: docker/build-push-action@v6
         with:
@@ -56,15 +56,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Ansible
         run: pipx install "ansible-core>=2.16,<2.20"
+
       - name: Install docker collection
         run: ansible-galaxy collection install community.docker
+
       - name: Write SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+
       - name: Deploy to STAGING (pull image)
         env:
           IMG: ${{ env.IMAGE_NAME }}
@@ -79,24 +83,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+
       - run: npm init -y
       - run: npm i -D @playwright/test
       - uses: microsoft/playwright-github-action@v1
+
       - name: Playwright UI test
         env:
           STAGING_URL: ${{ env.STAGING_URL }}
         run: npx playwright test tests/ui/playwright.spec.ts --project=chromium
+
       - name: k6 smoke
         run: |
           docker run --rm -e BASE_URL=${{ env.STAGING_URL }} \
             -v "$PWD/tests/load":/scripts grafana/k6 run /scripts/k6.js
+
       - name: ZAP baseline
         run: |
           docker run --rm -t -v "$PWD":/zap/wrk ghcr.io/zaproxy/zaproxy:stable \
             zap-baseline.py -t "${{ env.STAGING_URL }}" -g zap.conf -r zap.html || true
+
       - name: Upload ZAP report
         uses: actions/upload-artifact@v4
         with:
@@ -106,18 +116,22 @@ jobs:
   deploy_prod:
     needs: checks_staging
     runs-on: ubuntu-latest
-    environment: production
+    environment: "production env"   # <-- matches your environment name
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Ansible
         run: pipx install "ansible-core>=2.16,<2.20"
+
       - name: Install docker collection
         run: ansible-galaxy collection install community.docker
+
       - name: Write SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+
       - name: Blue-green to PROD (pull image)
         env:
           IMG: ${{ env.IMAGE_NAME }}
@@ -126,6 +140,7 @@ jobs:
           ANSIBLE_HOST_KEY_CHECKING=False \
           ansible-playbook -i ansible/inventory.ini ansible/prod-bluegreen-pull.yml \
             -e image=$IMG -e tag=$TAG
+
       - name: Post-deploy smoke
         run: curl -fsS "${{ env.PROD_URL }}/" | grep -i "Employee Directory"
 
