--- a/ansible/staging_pull.yml
+++ b/ansible/staging_pull.yml
@@ -1,5 +1,6 @@
 - hosts: staging
   become: yes
+  gather_facts: false
   vars:
     image: ""   # e.g. ghcr.io/OWNER/REPO/employee-dir
     tag: ""     # e.g. 42
