--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,7 +1,6 @@
 [staging]
-staging1 ansible_host=98.90.104.212 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/cicd-ansible ansible_ssh_common_args=-o StrictHostKeyChecking=accept-new
+staging1 ansible_host=98.90.104.212 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/cicd-ansible
 
 [prod]
-prod1 ansible_host=34.226.23.174 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/cicd-ansible ansible_ssh_common_args=-o StrictHostKeyChecking=accept-new
-
+prod1 ansible_host=34.226.23.174 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/cicd-ansible
 
